--- a/pre-condo/.env
+++ b/pre-condo/.env
@@ -3,3 +3,5 @@ SERVER_DB_USER=root
 SERVER_DB_PASSWORD= 
 SERVER_DB_HOST=localhost
 SERVER_DB_PORT=3306
+
+MYSQL_ALCHEMY_URL = mysql+pymysql://root:@localhost:3306/nerdpractice
