--- a/pre-condo/.env
+++ b/pre-condo/.env
@@ -4,4 +4,4 @@ SERVER_DB_PASSWORD=
 SERVER_DB_HOST=localhost
 SERVER_DB_PORT=3306
 
-MYSQL_ALCHEMY_URL = mysql+pymysql://root:@localhost:3306/nerdpractice
+MYSQL_ALCHEMY_URL=mysql+pymysql://root:@localhost:3306/nerdpractice
